--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -55,7 +55,7 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -500px;
     z-index: 1500;
 
     opacity: 0;
@@ -110,6 +110,7 @@
   }
 
   &__checkbox:checked ~ &__nav {
+    left: 0%;
     opacity: 1;
     width: 100%;
   }
